--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "build": "webpack --config config/webpack.prod.config.js"
   },
   "dependencies": {
+    "immutable": "^3.7.6",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
     "react-redux": "^4.4.1",
