--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "qiime-studio-backend",
+  "name": "qiime-studio-frontend",
   "version": "0.0.1",
   "description": "A web-based interface for QIIME 2.",
   "author": "QIIME 2 Development Team",
@@ -34,6 +34,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "chai": "^3.5.0",
+    "chai-immutable": "^1.5.4",
     "css-loader": "^0.23.1",
     "eslint": "^2.6.0",
     "eslint-config-airbnb": "^6.2.0",
