--- a/config/eslint.yaml
+++ b/config/eslint.yaml
@@ -1,6 +1,12 @@
 # See style guide: https://github.com/airbnb/javascript
 extends: airbnb
 
+# Allow Object spreading to pass linting, otherwise it throws
+# Parsing error: Unexpected token ..
+parserOptions:
+    ecmaFeatures:
+        experimentalObjectRestSpread: true
+        
 # Override a couple of rules because no style guide is perfect.
 rules:
     comma-dangle: [error, never]
@@ -11,9 +17,3 @@ rules:
     # There are edge cases such as (x) => { foo: [] } which are syntactically
     # ambiguous, does it return an object or is that a labeled block?
     arrow-body-style: [off, always]
-    # Immutable.js breaks linting without this rule
-    # usage will require import { Map as ImmutableMap, List as ImmutableList }
-    # as allowing just Map will also exempt the built-in JS Map object
-    new-cap:
-      - 1
-      - capIsNewExceptions: [ImmutableList, ImmutableMap]
