--- a/package.json
+++ b/package.json
@@ -13,12 +13,11 @@
     "lint:css": "stylelint 'app/**/*.css' --config config/stylelint.yaml",
     "lint:js": "eslint app/ config/ --ext .js,.jsx --config config/eslint.yaml",
     "pretest": "npm run lint --silent",
-    "test": "mocha --compilers js:babel-core/register --require ./test/test-helper.js --recursive",
+    "test": "mocha --compilers js:babel-core/register --recursive",
     "start": "webpack-dev-server --config config/webpack.dev.config.js --host localhost --port 4242 --inline",
     "build": "webpack --config config/webpack.prod.config.js"
   },
   "dependencies": {
-    "immutable": "^3.7.6",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
     "react-redux": "^4.4.1",
@@ -34,7 +33,6 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "chai": "^3.5.0",
-    "chai-immutable": "^1.5.4",
     "css-loader": "^0.23.1",
     "eslint": "^2.6.0",
     "eslint-config-airbnb": "^6.2.0",
