--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "build": "webpack --config config/webpack.prod.config.js"
   },
   "dependencies": {
+    "isomorphic-fetch": "^2.2.1",
+    "query-string": "^4.1.0",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
     "react-redux": "^4.4.1",
