--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "lint:css": "stylelint 'app/**/*.css' --config config/stylelint.yaml",
     "lint:js": "eslint app/ config/ --ext .js,.jsx --config config/eslint.yaml",
     "pretest": "npm run lint --silent",
-    "test": "mocha --compilers js:babel-core/register --recursive",
+    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive",
     "start": "webpack-dev-server --config config/webpack.dev.config.js --host localhost --port 4242 --inline",
     "build": "webpack --config config/webpack.prod.config.js"
   },
   "dependencies": {
     "isomorphic-fetch": "^2.2.1",
     "query-string": "^4.1.0",
-    "react": "^0.14.8",
-    "react-dom": "^0.14.8",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1",
     "react-redux": "^4.4.1",
     "react-router": "^2.0.1",
     "react-router-redux": "^4.0.2",
@@ -29,6 +29,7 @@
     "redux-thunk": "^2.0.1"
   },
   "devDependencies": {
+    "autoprefixer": "^6.3.6",
     "babel-cli": "^6.6.5",
     "babel-core": "^6.7.4",
     "babel-loader": "^6.2.4",
@@ -36,6 +37,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "chai": "^3.5.0",
+    "chai-things": "^0.2.0",
     "css-loader": "^0.23.1",
     "eslint": "^2.6.0",
     "eslint-config-airbnb": "^6.2.0",
