--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^0.14.8",
     "react-redux": "^4.4.1",
     "react-router": "^2.0.1",
+    "react-router-redux": "^4.0.2",
     "redux": "^3.3.1",
     "redux-thunk": "^2.0.1"
   },
