--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "build": "webpack --config config/webpack.prod.config.js"
   },
   "dependencies": {
+    "crypto-js": "^3.1.6",
+    "es6-promise": "^3.1.2",
     "isomorphic-fetch": "^2.2.1",
+    "lodash": "^4.12.0",
     "query-string": "^4.1.0",
     "react": "^15.0.1",
+    "react-addons-update": "^15.0.2",
     "react-dom": "^15.0.1",
     "react-redux": "^4.4.1",
     "react-router": "^2.0.1",
@@ -39,6 +43,7 @@
     "chai": "^3.5.0",
     "chai-things": "^0.2.0",
     "css-loader": "^0.23.1",
+    "deep-freeze": "0.0.1",
     "eslint": "^2.6.0",
     "eslint-config-airbnb": "^6.2.0",
     "eslint-plugin-react": "^4.2.3",
