--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "html-webpack-plugin": "^2.15.0",
     "mocha": "^2.4.5",
     "postcss-loader": "^0.8.2",
+    "pre-commit": "^1.1.3",
     "redux-logger": "^2.6.1",
     "style-loader": "^0.13.1",
     "stylelint": "^5.2.1",
