--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "url": "git://github.com/qiime2/qiime-studio-backend.git"
   },
   "scripts": {
+    "dev": "source activate qiime_studio && concurrently --raw \"qiime-studio serve -d\" \"npm start\"",
     "lint": "npm run lint:js && npm run lint:css",
     "lint:css": "stylelint 'app/**/*.css' --config config/stylelint.yaml",
     "lint:js": "eslint app/ config/ --ext .js,.jsx --config config/eslint.yaml",
@@ -21,11 +22,11 @@
     "crypto-js": "^3.1.6",
     "es6-promise": "^3.1.2",
     "isomorphic-fetch": "^2.2.1",
-    "query-string": "^4.1.0",
+    "query-string": "^4.2.0",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-redux": "^4.4.1",
-    "react-router": "^2.0.1",
+    "react-router": "^2.4.1",
     "react-router-redux": "^4.0.2",
     "redux": "^3.3.1",
     "redux-thunk": "^2.0.1"
@@ -50,6 +51,7 @@
     "html-webpack-plugin": "^2.15.0",
     "mocha": "^2.4.5",
     "postcss-loader": "^0.8.2",
+    "pre-commit": "^1.1.3",
     "redux-logger": "^2.6.1",
     "style-loader": "^0.13.1",
     "stylelint": "^5.2.1",
