--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: node_js
 node_js:
     - "5"
+before_script:
+    - export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
 script:
     - npm test
     - npm run build
