--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "lint:css": "stylelint 'app/**/*.css' --config config/stylelint.yaml",
     "lint:js": "eslint app/ config/ --ext .js,.jsx --config config/eslint.yaml",
     "lint": "npm run lint:js && npm run lint:css",
-    "pretest": "npm run lint --silent",
-    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive",
+    "test": "xvfb-maybe electron-mocha --renderer --compilers js:babel-core/register --require ./test/test_helper.js --recursive",
     "build:render": "webpack --config config/webpack.prod.config.js",
     "build:main": "webpack --config config/webpack.main.config.js",
     "build": "npm run build:main && npm run build:render",
@@ -50,6 +49,7 @@
     "cross-env": "^1.0.8",
     "css-loader": "^0.23.1",
     "deep-freeze": "0.0.1",
+    "electron-mocha": "^2.2.0",
     "eslint": "^2.6.0",
     "eslint-config-airbnb": "^6.2.0",
     "eslint-plugin-react": "^4.2.3",
@@ -66,7 +66,8 @@
     "stylelint-config-standard": "^4.0.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.15",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "xvfb-maybe": "^0.1.3"
   },
   "private": true
 }
