--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint:css": "stylelint 'app/**/*.css' --config config/stylelint.yaml",
     "lint:js": "eslint app/ config/ --ext .js,.jsx --config config/eslint.yaml",
     "lint": "npm run lint:js && npm run lint:css",
+    "pretest": "npm run lint --silent",
     "test": "xvfb-maybe electron-mocha --renderer --compilers js:babel-core/register --require ./test/test_helper.js --recursive",
     "build:render": "webpack --config config/webpack.prod.config.js",
     "build:main": "webpack --config config/webpack.main.config.js",
@@ -25,6 +26,7 @@
   "dependencies": {
     "crypto-js": "^3.1.6",
     "electron-prebuilt": "^1.2.1",
+    "highlight.js": "^9.4.0",
     "json-loader": "^0.5.4",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
@@ -60,6 +62,9 @@
     "postcss-loader": "^0.8.2",
     "pre-commit": "^1.1.3",
     "react-hot-loader": "^1.3.0",
+    "redux-devtools": "^3.3.1",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.0.11",
     "redux-logger": "^2.6.1",
     "style-loader": "^0.13.1",
     "stylelint": "^5.2.1",
