--- a/package.json
+++ b/package.json
@@ -25,43 +25,44 @@
   },
   "dependencies": {
     "crypto-js": "^3.1.6",
-    "electron-prebuilt": "^1.2.1",
-    "highlight.js": "^9.4.0",
+    "electron-prebuilt": "^1.2.6",
+    "highlight.js": "^9.5.0",
     "json-loader": "^0.5.4",
     "rc-collapse": "^1.6.3",
-    "react": "^15.0.1",
-    "react-dom": "^15.0.1",
-    "react-redux": "^4.4.1",
-    "react-router": "^2.4.1",
-    "react-router-redux": "^4.0.2",
+    "react": "^15.2.1",
+    "react-dom": "^15.2.1",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.5.2",
+    "react-router-redux": "^4.0.5",
     "redux": "^3.5.2",
-    "redux-electron-store": "^0.3.11",
-    "redux-thunk": "^2.0.1",
+    "redux-thunk": "^2.1.0",
     "which": "^1.2.10"
   },
   "devDependencies": {
-    "autoprefixer": "^6.3.6",
-    "babel-cli": "^6.6.5",
-    "babel-core": "^6.7.4",
+    "autoprefixer": "^6.3.7",
+    "babel-cli": "^6.10.1",
+    "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
-    "babel-plugin-transform-object-rest-spread": "^6.6.5",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
     "chai": "^3.5.0",
     "chai-things": "^0.2.0",
-    "concurrently": "^2.1.0",
+    "concurrently": "^2.2.0",
     "cross-env": "^1.0.8",
     "css-loader": "^0.23.1",
     "deep-freeze": "0.0.1",
-    "electron-mocha": "^2.2.0",
-    "eslint": "^2.6.0",
-    "eslint-config-airbnb": "^6.2.0",
-    "eslint-plugin-react": "^4.2.3",
+    "electron-mocha": "^2.3.0",
+    "eslint": "^3.0.1",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.10.2",
+    "eslint-plugin-jsx-a11y": "^1.5.5",
+    "eslint-plugin-react": "^5.2.2",
     "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
-    "html-webpack-plugin": "^2.15.0",
-    "mocha": "^2.4.5",
-    "postcss-loader": "^0.8.2",
+    "file-loader": "^0.9.0",
+    "html-webpack-plugin": "^2.22.0",
+    "mocha": "^2.5.3",
+    "postcss-loader": "^0.9.1",
     "pre-commit": "^1.1.3",
     "react-hot-loader": "^1.3.0",
     "redux-devtools": "^3.3.1",
@@ -69,10 +70,10 @@
     "redux-devtools-log-monitor": "^1.0.11",
     "redux-logger": "^2.6.1",
     "style-loader": "^0.13.1",
-    "stylelint": "^5.2.1",
-    "stylelint-config-standard": "^4.0.1",
+    "stylelint": "^6.9.0",
+    "stylelint-config-standard": "^10.0.0",
     "url-loader": "^0.5.7",
-    "webpack": "^1.12.15",
+    "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
     "xvfb-maybe": "^0.1.3"
   },
