--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "mocha": "^2.4.5",
     "postcss-loader": "^0.8.2",
     "pre-commit": "^1.1.3",
+    "rc-collapse": "^1.6.3",
     "react-hot-loader": "^1.3.0",
     "redux-logger": "^2.6.1",
     "style-loader": "^0.13.1",
