--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "electron-prebuilt": "^1.2.1",
     "highlight.js": "^9.4.0",
     "json-loader": "^0.5.4",
+    "rc-collapse": "^1.6.3",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-redux": "^4.4.1",
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.2",
-    "redux": "^3.3.1",
+    "redux": "^3.5.2",
+    "redux-electron-store": "^0.3.10",
     "redux-thunk": "^2.0.1",
     "which": "^1.2.10"
   },
@@ -61,7 +63,6 @@
     "mocha": "^2.4.5",
     "postcss-loader": "^0.8.2",
     "pre-commit": "^1.1.3",
-    "rc-collapse": "^1.6.3",
     "react-hot-loader": "^1.3.0",
     "redux-devtools": "^3.3.1",
     "redux-devtools-dock-monitor": "^1.1.1",
