--- a/config/eslint.yaml
+++ b/config/eslint.yaml
@@ -17,3 +17,4 @@ rules:
     # There are edge cases such as (x) => { foo: [] } which are syntactically
     # ambiguous, does it return an object or is that a labeled block?
     arrow-body-style: [off, always]
+    no-nested-ternary: off
