--- a/config/stylelint.yaml
+++ b/config/stylelint.yaml
@@ -1,3 +1,11 @@
+# ----------------------------------------------------------------------------
+# Copyright (c) 2016--, QIIME development team.
+#
+# Distributed under the terms of the Modified BSD License.
+#
+# The full license is in the file LICENSE, distributed with this software.
+# ----------------------------------------------------------------------------
+
 extends: stylelint-config-standard
 rules:
     # PEP8 uses 4 spaces, it's just easier this way.
