--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,22 @@ node_js:
 cache:
   directories:
     - node_modules
+before_install:
+    - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
+    - chmod +x miniconda.sh
+    - ./miniconda.sh -b
+    - export PATH=/home/travis/miniconda3/bin:$PATH
+install:
+    - conda create --yes -n test-env python=3.5
+    - source activate test-env
+    - pip install https://github.com/qiime2/qiime2/archive/master.zip
+    - pip install flake8
+    - pip install .
+    - git clone https://github.com/qiime2/q2lint
 before_script:
     - export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
 script:
     - npm test
     - npm run build
+    - flake8
+    - python q2lint/q2lint.py
