--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "q2studio",
-  "version": "0.0.1",
+  "version": "2017.2.0-dev0",
   "description": "A web-based interface for QIIME 2.",
   "author": "QIIME 2 Development Team",
   "license": "BSD-3-Clause",
