--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-    - "5"
+    - "stable"
 cache:
   directories:
     - node_modules
@@ -15,6 +15,7 @@ install:
     - pip install https://github.com/qiime2/qiime2/archive/master.zip
     - pip install flake8
     - pip install .
+    - npm install .
     - git clone https://github.com/qiime2/q2lint
 before_script:
     - export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
