--- a/config/eslint.yaml
+++ b/config/eslint.yaml
@@ -9,6 +9,10 @@
 # See style guide: https://github.com/airbnb/javascript
 extends: airbnb
 
+env:
+    browser: true
+    node: true
+
 # Allow Object spreading to pass linting, otherwise it throws
 # Parsing error: Unexpected token ..
 parserOptions:
@@ -18,10 +22,16 @@ parserOptions:
 rules:
     no-alert: off
     comma-dangle: [error, never]
+    no-restricted-syntax: warn
+    no-plusplus: warn
     # PEP8 uses 4 spaces, it's just easier this way.
     indent: [error, 4]
     react/jsx-indent: [error, 4]
     react/jsx-indent-props: [error, 4]
+    react/forbid-prop-types: warn
+    react/require-default-props: warn
+    jsx-a11y/no-static-element-interactions: warn
+    import/prefer-default-export: warn
     # There are edge cases such as (x) => { foo: [] } which are syntactically
     # ambiguous, does it return an object or is that a labeled block?
     arrow-body-style: [off, always]
