--- a/package.json
+++ b/package.json
@@ -24,11 +24,16 @@
     "dev": "npm run dev:main && concurrently --kill-others \"npm run dev:render\" \"npm run dev:start\""
   },
   "dependencies": {
+    "autoprefixer": "^6.7.2",
     "bootstrap-css-only": "^3.3.6",
     "crypto-js": "^3.1.6",
-    "electron-prebuilt": "^1.2.1",
+    "electron": "^1.4.15",
+    "extract-text-webpack-plugin": "^1.0.1",
     "highlight.js": "^9.4.0",
+    "html-webpack-plugin": "^2.28.0",
     "json-loader": "^0.5.4",
+    "lodash": "^4.17.4",
+    "moment": "^2.17.1",
     "rc-collapse": "^1.6.3",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
@@ -37,12 +42,15 @@
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.2",
     "redux": "^3.5.2",
+    "redux-devtools": "^3.3.2",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.2.0",
     "redux-electron-store": "^0.3.11",
     "redux-thunk": "^2.0.1",
+    "webpack": "^1.14.0",
     "which": "^1.2.10"
   },
   "devDependencies": {
-    "autoprefixer": "^6.3.6",
     "babel-cli": "^6.6.5",
     "babel-core": "^6.7.4",
     "babel-loader": "^6.2.4",
@@ -56,25 +64,21 @@
     "css-loader": "^0.23.1",
     "deep-freeze": "0.0.1",
     "electron-mocha": "^2.2.0",
-    "eslint": "^2.6.0",
-    "eslint-config-airbnb": "^6.2.0",
-    "eslint-plugin-react": "^4.2.3",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "eslint": "^3.15.0",
+    "eslint-config-airbnb": "^14.0.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^3.0.2",
+    "eslint-plugin-react": "^6.9.0",
     "file-loader": "^0.8.5",
-    "html-webpack-plugin": "^2.15.0",
     "mocha": "^2.4.5",
     "postcss-loader": "^0.8.2",
     "pre-commit": "^1.1.3",
     "react-hot-loader": "^1.3.0",
-    "redux-devtools": "^3.3.1",
-    "redux-devtools-dock-monitor": "^1.1.1",
-    "redux-devtools-log-monitor": "^1.0.11",
     "redux-logger": "^2.6.1",
     "style-loader": "^0.13.1",
     "stylelint": "^5.2.1",
     "stylelint-config-standard": "^4.0.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.12.15",
     "webpack-dev-server": "^1.14.1",
     "xvfb-maybe": "^0.1.3"
   },
