--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
 install:
     - conda create --yes -n test-env python=3.5
     - source activate test-env
-    - pip install https://github.com/qiime2/qiime2/archive/master.zip
+    - pip install git+https://github.com/qiime2/qiime2.git
     - pip install flake8
     - pip install .
     - npm install .
