--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "q2studio",
-  "version": "2017.5.0-dev0",
+  "version": "2017.5.0",
   "description": "A web-based interface for QIIME 2.",
   "author": "QIIME 2 Development Team",
   "license": "BSD-3-Clause",
