--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "q2studio",
   "version": "2017.7.0-dev0",
-  "description": "A web-based interface for QIIME 2.",
+  "description": "A graphical user interface for QIIME 2.",
   "author": "QIIME 2 Development Team",
   "license": "BSD-3-Clause",
   "repository": {
