--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ install:
     - pip install flake8
     - pip install .
     - pip install -q https://github.com/qiime2/q2lint/archive/master.zip
+    - make clean
 before_script:
     - export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
 script:
