--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ node_js:
 cache:
   directories:
     - node_modules
+services:
+  - xvfb
 before_install:
     - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
     - chmod +x miniconda.sh
@@ -17,8 +19,6 @@ install:
     - pip install .
     - pip install -q https://github.com/qiime2/q2lint/archive/master.zip
     - make clean
-before_script:
-    - export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
 script:
     - make test-cov
     - make lint
