--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+dist: xenial
+services:
+    - xvfb
 language: node_js
 node_js:
     - "stable"
@@ -18,5 +21,5 @@ install:
     - pip install -q https://github.com/qiime2/q2lint/archive/master.zip
     - make clean
 script:
-    - xvfb-run make test-cov
+    - make test-cov
     - make lint
