--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+dist: xenial
+services:
+    - xvfb
 language: node_js
 node_js:
     - "stable"
@@ -17,8 +20,6 @@ install:
     - pip install .
     - pip install -q https://github.com/qiime2/q2lint/archive/master.zip
     - make clean
-before_script:
-    - export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
 script:
     - make test-cov
     - make lint
