--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ before_install:
 install:
     - conda create --yes -n test-env python=3.6
     - source activate test-env
+    - sudo apt-get install libgconf-2-4
     - pip install git+https://github.com/qiime2/qiime2.git
     - pip install flake8
     - pip install .
