--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
     - source activate test-env
     - sudo apt-get install libgconf-2-4
     - pip install git+https://github.com/qiime2/qiime2.git
-    - pip install flake8
+    - pip install flake8 pytest
     - pip install .
     - pip install -q https://github.com/qiime2/q2lint/archive/master.zip
     - make clean
