--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,10 @@ before_install:
     - ./miniconda.sh -b
     - export PATH=/home/travis/miniconda3/bin:$PATH
 install:
-    - conda create --yes -n test-env python=3.6
+    - wget -q https://raw.githubusercontent.com/qiime2/environment-files/master/latest/staging/qiime2-latest-py36-linux-conda.yml
+    - conda env create -q -n test-env --file qiime2-latest-py36-linux-conda.yml
     - source activate test-env
     - sudo apt-get install libgconf-2-4
-    - pip install git+https://github.com/qiime2/qiime2.git
     - pip install flake8 pytest
     - pip install .
     - pip install -q https://github.com/qiime2/q2lint/archive/master.zip
