--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
 
     - name: install system dependencies
       run: |
-        sudo apt install -y libgconf-2-4 xvfb
+        sudo apt install -y libgconf-2-4 xvfb libgtk2.0-0
 
     - name: build
       shell: bash -l {0}
