--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
       run: |
         envFile=qiime2-latest-py36-linux-conda.yml
         wget https://raw.githubusercontent.com/qiime2/environment-files/master/latest/staging/$envFile
-        conda env create -q -p ./test-env --file $envFile
+        conda env create -q -p ../test-env --file $envFile
 
     - name: install system dependencies
       run: |
@@ -48,5 +48,5 @@ jobs:
       shell: bash -l {0}
       run: |
         source "$CONDA/etc/profile.d/conda.sh"
-        conda activate ./test-env
+        conda activate ../test-env
         make test
