--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,14 +24,12 @@ jobs:
     - name: lint
       run: |
         pip install -q https://github.com/qiime2/q2lint/archive/master.zip
-        q2lint
+        q2lint --disable-install-requires-check
         pip install -q flake8
         flake8
 
   verify:
     runs-on: ubuntu-latest
-    env:
-      DISPLAY: :0
     steps:
     - name: checkout source
       uses: actions/checkout@v2
@@ -40,15 +38,16 @@ jobs:
       run: |
         envFile=qiime2-latest-py36-linux-conda.yml
         wget https://raw.githubusercontent.com/qiime2/environment-files/master/latest/staging/$envFile
-        conda env create -q -p ./test-env --file $envFile
+        conda env create -q -p ../test-env --file $envFile
 
     - name: install system dependencies
       run: |
-        sudo apt install -y libgconf xvfb
+        sudo apt install -y libgconf-2-4 xvfb libgtk2.0-0
 
-    - name: build
+    - name: build and test
       shell: bash -l {0}
       run: |
         source "$CONDA/etc/profile.d/conda.sh"
-        conda activate ./test-env
+        conda activate ../test-env
+        pip install .
         make test
